BuildHughes/translation-tool/inputs/source_meta/objects/HnsRmaOdataViews__x.object
<CustomObject>
    <description>HnsRmaOdataViews</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HnsRmaOdataViews</externalName>
    <fields>
        <fullName>ACCOUNTID__c</fullName>
        <description>ACCOUNTID</description>
        <externalDeveloperName>ACCOUNTID</externalDeveloperName>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BO_ID_SITE__c</fullName>
        <description>BO_ID_SITE</description>
        <externalDeveloperName>BO_ID_SITE</externalDeveloperName>
        <label>BO_ID_SITE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BO_ID__c</fullName>
        <description>BO_ID</description>
        <externalDeveloperName>BO_ID</externalDeveloperName>
        <label>BO_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUSINESS_UNIT__c</fullName>
        <description>BUSINESS_UNIT</description>
        <externalDeveloperName>BUSINESS_UNIT</externalDeveloperName>
        <label>BUSINESS_UNIT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_ID__c</fullName>
        <description>CASE_ID</description>
        <externalDeveloperName>CASE_ID</externalDeveloperName>
        <label>Case ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CENTRAL_DB_ID__c</fullName>
        <description>CENTRAL_DB_ID</description>
        <externalDeveloperName>CENTRAL_DB_ID</externalDeveloperName>
        <label>Central DB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EST_RETURN_DT__c</fullName>
        <description>EST_RETURN_DT</description>
        <externalDeveloperName>EST_RETURN_DT</externalDeveloperName>
        <label>Return Date (EST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_SITE_ID__c</fullName>
        <description>HNS_SITE_ID</description>
        <externalDeveloperName>HNS_SITE_ID</externalDeveloperName>
        <label>SAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_ID__c</fullName>
        <description>RMA_ID</description>
        <externalDeveloperName>RMA_ID</externalDeveloperName>
        <label>RMA ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_RET_TYPE__c</fullName>
        <description>RMA_RET_TYPE</description>
        <externalDeveloperName>RMA_RET_TYPE</externalDeveloperName>
        <label>RMA Return Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_ADDED_DTTM__c</fullName>
        <description>ROW_ADDED_DTTM</description>
        <externalDeveloperName>ROW_ADDED_DTTM</externalDeveloperName>
        <label>Row Added DateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <description>SETID</description>
        <externalDeveloperName>SETID</externalDeveloperName>
        <label>SETID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_ID__c</fullName>
        <description>SITE_ID</description>
        <externalDeveloperName>SITE_ID</externalDeveloperName>
        <label>PS Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZERPRMANBR__c</fullName>
        <description>ZERPRMANBR</description>
        <externalDeveloperName>ZERPRMANBR</externalDeveloperName>
        <label>RMA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZRMAISSUEDT__c</fullName>
        <description>ZRMAISSUEDT</description>
        <externalDeveloperName>ZRMAISSUEDT</externalDeveloperName>
        <label>RMA Issue Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZRMASTATUS__c</fullName>
        <description>ZRMASTATUS</description>
        <externalDeveloperName>ZRMASTATUS</externalDeveloperName>
        <label>RMA Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZSF_EXP_RMA__c</fullName>
        <description>ZSF_EXP_RMA</description>
        <externalDeveloperName>ZSF_EXP_RMA</externalDeveloperName>
        <label>Expedite RMA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZSF_WAIVE_SHP_FEE__c</fullName>
        <description>ZSF_WAIVE_SHP_FEE</description>
        <externalDeveloperName>ZSF_WAIVE_SHP_FEE</externalDeveloperName>
        <label>Waive Dispatch Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HnsRmaOdataViews</label>
    <pluralLabel>HnsRmaOdataViews</pluralLabel>
</CustomObject>